edge-ui-0.1.0.yml
---
# Source: edge-ui/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: edge-edge-ui
  namespace: kube-system
  labels:
    helm.sh/chart: edge-ui-0.1.0
    app.kubernetes.io/name: edge-ui
    app.kubernetes.io/instance: edge
    app.kubernetes.io/component: ui
    app.kubernetes.io/version: "0.1.0"
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: ui
spec:
  type: NodePort
  ports:
    - port: 8443
      targetPort: http
      protocol: TCP
      name: http
      nodePort: 30001
  selector:
    app.kubernetes.io/name: edge-ui
    app.kubernetes.io/instance: edge
    app.kubernetes.io/component: ui
---
# Source: edge-ui/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: edge-edge-ui
  namespace: kube-system
  labels:
    helm.sh/chart: edge-ui-0.1.0
    app.kubernetes.io/name: edge-ui
    app.kubernetes.io/instance: edge
    app.kubernetes.io/component: ui
    app.kubernetes.io/version: "0.1.0"
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: ui
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: edge-ui
      app.kubernetes.io/instance: edge
      app.kubernetes.io/component: ui
  template:
    metadata:
      labels:
        app.kubernetes.io/name: edge-ui
        app.kubernetes.io/instance: edge
        app.kubernetes.io/component: ui
    spec:
      serviceAccountName: edge-edge-ui
      securityContext:
        {}
      containers:
        - name: edge-api-server
          securityContext:
            {}
          image: "guangbo/edge-api-server:master"
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8443
              protocol: TCP
          resources:
            {}
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: role
                operator: In
                values:
                - k3s-master
            - matchExpressions:
              - key: beta.kubernetes.io/os
                operator: In
                values:
                - linux
            - matchExpressions:
              - key: kubernetes.io/os
                operator: In
                values:
                - linux
