nginx-loadbalancer.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx-lb
spec:
  selector:
    app: nginx
  ports:
    - port: 8888
      targetPort: 80
  type: LoadBalancer
